--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # ===============================
 # DATABASE
 # ===============================
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:sqlserver://localhost\\DESKTOP-P10EU84:1433;databaseName=OpenWeatherMap
-spring.datasource.url=jdbc:mysql://localhost:3306/openweathermaps?&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://weatherdb:3306/openweathermaps?&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/openweathermaps?&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=${password}
+spring.datasource.password=Kekus123
 # ===============================
 # JPA / HIBERNATE
 # ===============================
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #================================
-# SECURITY
+# Weather API
 #================================
 server.port=8080
 weather.api.url=https://api.openweathermap.org/data/2.5/
